# autoarg

./: LICENSE  README.md  pyproject.toml
autoarg/: __init__.py  decorators.py  generate.py  types.py
examples/: grep.py
src/autoarg/: generate.py
tests/: test_generate.py
