[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoarg"
authors = [
    { name="Justin Snyder", email="ifoundthebeef@gmail.com" }
]
description = "Experimental python module for making command line parsers from function argument annotations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Beefster09/autoarg"
"Bug Tracker" = "https://github.com/Beefster09/autoarg/issues"
